--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -651,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": 218,
-   "id": "1cc2c8d4",
+   "id": "ff0e98ae",
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": 219,
-   "id": "cacb1dce",
+   "id": "4e675a54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": 220,
-   "id": "9716c88a",
+   "id": "ca7000a3",
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": 221,
-   "id": "c7a90ffe",
+   "id": "b2672306",
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +978,7 @@
   {
    "cell_type": "code",
    "execution_count": 214,
-   "id": "a237113c",
+   "id": "2d902a80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "50256546",
+   "id": "35843b2d",
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": 224,
-   "id": "ebae8229",
+   "id": "e235f217",
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1038,7 @@
   {
    "cell_type": "code",
    "execution_count": 223,
-   "id": "d9d51464",
+   "id": "26809717",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1048,7 +1048,7 @@
   {
    "cell_type": "code",
    "execution_count": 264,
-   "id": "b2a037a1",
+   "id": "36425f8e",
    "metadata": {},
    "outputs": [
     {
@@ -1084,7 +1084,7 @@
   {
    "cell_type": "code",
    "execution_count": 248,
-   "id": "c1ed514f",
+   "id": "f710528d",
    "metadata": {},
    "outputs": [
     {
@@ -1111,7 +1111,7 @@
   {
    "cell_type": "code",
    "execution_count": 253,
-   "id": "67a37ab9",
+   "id": "e091dfcc",
    "metadata": {},
    "outputs": [
     {
@@ -1154,7 +1154,7 @@
   {
    "cell_type": "code",
    "execution_count": 252,
-   "id": "588b449e",
+   "id": "04a277ab",
    "metadata": {},
    "outputs": [
     {
@@ -1233,7 +1233,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "ac0964de",
+   "id": "89aa29b8",
    "metadata": {},
    "outputs": [
     {
@@ -1254,7 +1254,7 @@
   {
    "cell_type": "code",
    "execution_count": 354,
-   "id": "fe38b8e7",
+   "id": "723a5cdf",
    "metadata": {},
    "outputs": [
     {
@@ -3660,7 +3660,7 @@
   {
    "cell_type": "code",
    "execution_count": 350,
-   "id": "ba28a2c5",
+   "id": "0fd0e350",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3673,7 +3673,7 @@
   {
    "cell_type": "code",
    "execution_count": 322,
-   "id": "d361bb2a",
+   "id": "8e7b857c",
    "metadata": {},
    "outputs": [
     {
@@ -3753,7 +3753,7 @@
   {
    "cell_type": "code",
    "execution_count": 261,
-   "id": "83161c14",
+   "id": "e1bcd38a",
    "metadata": {},
    "outputs": [
     {
@@ -3773,7 +3773,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01cf27d0",
+   "id": "5f3e95b5",
    "metadata": {},
    "source": [
     "DROPPING NULLS OF COLUMNS❗️"
@@ -3782,7 +3782,7 @@
   {
    "cell_type": "code",
    "execution_count": 337,
-   "id": "6be185ad",
+   "id": "cb4f04ea",
    "metadata": {},
    "outputs": [
     {
@@ -3805,7 +3805,7 @@
   {
    "cell_type": "code",
    "execution_count": 212,
-   "id": "ccba03af",
+   "id": "ee23d382",
    "metadata": {},
    "outputs": [
     {
@@ -3825,7 +3825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84d10e64",
+   "id": "a4111e0c",
    "metadata": {},
    "source": [
     "# looking for stuff in columns"
@@ -3834,7 +3834,7 @@
   {
    "cell_type": "code",
    "execution_count": 282,
-   "id": "b4eac59c",
+   "id": "0c2a22b8",
    "metadata": {},
    "outputs": [
     {
@@ -3858,7 +3858,7 @@
   {
    "cell_type": "code",
    "execution_count": 273,
-   "id": "85a36df3",
+   "id": "6f26be47",
    "metadata": {},
    "outputs": [
     {
@@ -3884,7 +3884,7 @@
   {
    "cell_type": "code",
    "execution_count": 269,
-   "id": "5f749767",
+   "id": "e5698ff1",
    "metadata": {},
    "outputs": [
     {
@@ -6102,7 +6102,7 @@
   {
    "cell_type": "code",
    "execution_count": 328,
-   "id": "8c3832a9",
+   "id": "809919f7",
    "metadata": {},
    "outputs": [
     {
@@ -6146,7 +6146,7 @@
   {
    "cell_type": "code",
    "execution_count": 553,
-   "id": "2bd0a44d",
+   "id": "5e069414",
    "metadata": {},
    "outputs": [
     {
@@ -8852,7 +8852,7 @@
   {
    "cell_type": "code",
    "execution_count": 263,
-   "id": "00ebe3e8",
+   "id": "d4791a32",
    "metadata": {},
    "outputs": [
     {
@@ -8925,7 +8925,7 @@
   {
    "cell_type": "code",
    "execution_count": 313,
-   "id": "1504f5be",
+   "id": "ab1ba016",
    "metadata": {},
    "outputs": [
     {
@@ -8956,7 +8956,7 @@
   {
    "cell_type": "code",
    "execution_count": 312,
-   "id": "6903faac",
+   "id": "edbf2a9b",
    "metadata": {},
    "outputs": [
     {
@@ -9038,7 +9038,7 @@
   {
    "cell_type": "code",
    "execution_count": 314,
-   "id": "d2c733b6",
+   "id": "d5e29a74",
    "metadata": {},
    "outputs": [
     {
@@ -9118,7 +9118,7 @@
   {
    "cell_type": "code",
    "execution_count": 317,
-   "id": "75a4b2e8",
+   "id": "45d96623",
    "metadata": {},
    "outputs": [
     {
@@ -9139,7 +9139,7 @@
   {
    "cell_type": "code",
    "execution_count": 318,
-   "id": "6111f5f3",
+   "id": "b3ca43bc",
    "metadata": {},
    "outputs": [
     {
@@ -9160,7 +9160,7 @@
   {
    "cell_type": "code",
    "execution_count": 662,
-   "id": "3d2f904e",
+   "id": "daf368de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9170,7 +9170,7 @@
   {
    "cell_type": "code",
    "execution_count": 385,
-   "id": "aee26e76",
+   "id": "6f0e17d3",
    "metadata": {},
    "outputs": [
     {
@@ -9191,7 +9191,7 @@
   {
    "cell_type": "code",
    "execution_count": 383,
-   "id": "ded1a478",
+   "id": "9cb20544",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9201,7 +9201,7 @@
   {
    "cell_type": "code",
    "execution_count": 663,
-   "id": "83bfa4e0",
+   "id": "bc23b07c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9211,7 +9211,7 @@
   {
    "cell_type": "code",
    "execution_count": 389,
-   "id": "cb04f6f4",
+   "id": "c0e1f829",
    "metadata": {},
    "outputs": [
     {
@@ -9502,7 +9502,7 @@
   {
    "cell_type": "code",
    "execution_count": 396,
-   "id": "4b58c6de",
+   "id": "f59114be",
    "metadata": {},
    "outputs": [
     {
@@ -9523,7 +9523,7 @@
   {
    "cell_type": "code",
    "execution_count": 550,
-   "id": "42ffb956",
+   "id": "5fdf2648",
    "metadata": {},
    "outputs": [
     {
@@ -9594,7 +9594,7 @@
   {
    "cell_type": "code",
    "execution_count": 566,
-   "id": "3ce89df6",
+   "id": "cd45533d",
    "metadata": {},
    "outputs": [
     {
@@ -11213,7 +11213,7 @@
   {
    "cell_type": "code",
    "execution_count": 548,
-   "id": "0cae1491",
+   "id": "18825da5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11223,7 +11223,7 @@
   {
    "cell_type": "code",
    "execution_count": 551,
-   "id": "cf712572",
+   "id": "4b63b465",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11233,7 +11233,7 @@
   {
    "cell_type": "code",
    "execution_count": 659,
-   "id": "1fdbd9e3",
+   "id": "018196f4",
    "metadata": {},
    "outputs": [
     {
@@ -11266,7 +11266,7 @@
   {
    "cell_type": "code",
    "execution_count": 622,
-   "id": "8aa6f214",
+   "id": "2f2ae7ff",
    "metadata": {},
    "outputs": [
     {
@@ -11288,7 +11288,7 @@
   {
    "cell_type": "code",
    "execution_count": 660,
-   "id": "aea312d0",
+   "id": "c816a33f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11298,7 +11298,7 @@
   {
    "cell_type": "code",
    "execution_count": 661,
-   "id": "11458b47",
+   "id": "906b2727",
    "metadata": {},
    "outputs": [
     {
@@ -11323,7 +11323,7 @@
   {
    "cell_type": "code",
    "execution_count": 723,
-   "id": "e1c4777d",
+   "id": "320645e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11343,7 +11343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "727e9977",
+   "id": "46a44b59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11353,7 +11353,7 @@
   {
    "cell_type": "code",
    "execution_count": 816,
-   "id": "c7b24e3d",
+   "id": "8bd6e8aa",
    "metadata": {},
    "outputs": [
     {
@@ -11410,7 +11410,7 @@
   {
    "cell_type": "code",
    "execution_count": 757,
-   "id": "f2f4efbd",
+   "id": "4ca8b209",
    "metadata": {},
    "outputs": [
     {
@@ -11611,7 +11611,7 @@
   {
    "cell_type": "code",
    "execution_count": 775,
-   "id": "028b36a4",
+   "id": "d9d42b13",
    "metadata": {},
    "outputs": [
     {
@@ -12232,7 +12232,7 @@
   {
    "cell_type": "code",
    "execution_count": 758,
-   "id": "d41ab3f0",
+   "id": "ab0d1705",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12242,7 +12242,7 @@
   {
    "cell_type": "code",
    "execution_count": 759,
-   "id": "f3453720",
+   "id": "d6605fbf",
    "metadata": {},
    "outputs": [
     {
@@ -12266,7 +12266,7 @@
   {
    "cell_type": "code",
    "execution_count": 792,
-   "id": "6ebc6974",
+   "id": "87c9550e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12285,7 +12285,7 @@
   {
    "cell_type": "code",
    "execution_count": 796,
-   "id": "a8e53a21",
+   "id": "4d0fd10f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12305,7 +12305,7 @@
   {
    "cell_type": "code",
    "execution_count": 1041,
-   "id": "ebbe4dcc",
+   "id": "6b51acad",
    "metadata": {},
    "outputs": [
     {
@@ -12329,7 +12329,7 @@
   {
    "cell_type": "code",
    "execution_count": 1008,
-   "id": "e324d006",
+   "id": "4a9bbead",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12339,7 +12339,7 @@
   {
    "cell_type": "code",
    "execution_count": 1038,
-   "id": "53bdd440",
+   "id": "d6600a58",
    "metadata": {},
    "outputs": [
     {
@@ -12375,7 +12375,7 @@
   {
    "cell_type": "code",
    "execution_count": 1042,
-   "id": "8fd1d596",
+   "id": "703b2208",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12385,7 +12385,7 @@
   {
    "cell_type": "code",
    "execution_count": 1044,
-   "id": "621ebc20",
+   "id": "c8cb5ad7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12395,7 +12395,7 @@
   {
    "cell_type": "code",
    "execution_count": 1045,
-   "id": "e738bf5c",
+   "id": "e407c839",
    "metadata": {},
    "outputs": [
     {
@@ -12748,7 +12748,7 @@
   {
    "cell_type": "code",
    "execution_count": 1049,
-   "id": "0fe53a36",
+   "id": "be722e74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12758,7 +12758,7 @@
   {
    "cell_type": "code",
    "execution_count": 1048,
-   "id": "77e0d4bd",
+   "id": "abb55ff1",
    "metadata": {},
    "outputs": [
     {
@@ -12790,7 +12790,7 @@
   {
    "cell_type": "code",
    "execution_count": 1121,
-   "id": "cce8133f",
+   "id": "730f5721",
    "metadata": {},
    "outputs": [
     {
@@ -12813,7 +12813,7 @@
   {
    "cell_type": "code",
    "execution_count": 1130,
-   "id": "2abc6a13",
+   "id": "f349dafa",
    "metadata": {},
    "outputs": [
     {
@@ -12835,7 +12835,7 @@
   {
    "cell_type": "code",
    "execution_count": 1128,
-   "id": "75f5f2e3",
+   "id": "8f0a021c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12845,7 +12845,7 @@
   {
    "cell_type": "code",
    "execution_count": 1131,
-   "id": "b9a822c5",
+   "id": "732dcf7c",
    "metadata": {},
    "outputs": [
     {
@@ -12877,7 +12877,7 @@
   {
    "cell_type": "code",
    "execution_count": 1073,
-   "id": "e91dfc8a",
+   "id": "8b7a0d3a",
    "metadata": {},
    "outputs": [
     {
@@ -12901,7 +12901,7 @@
   {
    "cell_type": "code",
    "execution_count": 1134,
-   "id": "0eac6a87",
+   "id": "dfc2f540",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12914,7 +12914,7 @@
   {
    "cell_type": "code",
    "execution_count": 1133,
-   "id": "d855f2c9",
+   "id": "49c60701",
    "metadata": {},
    "outputs": [
     {
@@ -12935,7 +12935,7 @@
   {
    "cell_type": "code",
    "execution_count": 1164,
-   "id": "874a37d8",
+   "id": "19c449c0",
    "metadata": {},
    "outputs": [
     {
@@ -13026,7 +13026,7 @@
   {
    "cell_type": "code",
    "execution_count": 1163,
-   "id": "2123c045",
+   "id": "3153afca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13036,7 +13036,7 @@
   {
    "cell_type": "code",
    "execution_count": 1186,
-   "id": "517b20a9",
+   "id": "96f02560",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13046,7 +13046,7 @@
   {
    "cell_type": "code",
    "execution_count": 1187,
-   "id": "ed83991e",
+   "id": "9c49b03f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13056,7 +13056,7 @@
   {
    "cell_type": "code",
    "execution_count": 1116,
-   "id": "5bbc07dd",
+   "id": "4e93d8dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13066,7 +13066,7 @@
   {
    "cell_type": "code",
    "execution_count": 1120,
-   "id": "b10729f2",
+   "id": "48ea2530",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13076,7 +13076,7 @@
   {
    "cell_type": "code",
    "execution_count": 1166,
-   "id": "c0b868f8",
+   "id": "edb6142a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13086,7 +13086,7 @@
   {
    "cell_type": "code",
    "execution_count": 1167,
-   "id": "62fafd0d",
+   "id": "ef536c8b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13096,7 +13096,7 @@
   {
    "cell_type": "code",
    "execution_count": 1168,
-   "id": "1091e9a8",
+   "id": "6f8fa207",
    "metadata": {},
    "outputs": [
     {
@@ -13128,7 +13128,7 @@
   {
    "cell_type": "code",
    "execution_count": 1169,
-   "id": "96db4e1d",
+   "id": "ac85dc0c",
    "metadata": {},
    "outputs": [
     {
@@ -13500,7 +13500,7 @@
   {
    "cell_type": "code",
    "execution_count": 1176,
-   "id": "adb47ec3",
+   "id": "56522570",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13510,7 +13510,7 @@
   {
    "cell_type": "code",
    "execution_count": 1180,
-   "id": "cdc1eea7",
+   "id": "00a68ca2",
    "metadata": {},
    "outputs": [
     {
@@ -13886,7 +13886,7 @@
   {
    "cell_type": "code",
    "execution_count": 1185,
-   "id": "0f76ae98",
+   "id": "1d51e5e0",
    "metadata": {},
    "outputs": [
     {
@@ -14259,7 +14259,7 @@
   {
    "cell_type": "code",
    "execution_count": 1184,
-   "id": "54dbac86",
+   "id": "562b678b",
    "metadata": {},
    "outputs": [
     {
@@ -14632,7 +14632,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10b3ebcc",
+   "id": "959e9d35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14644,7 +14644,7 @@
   {
    "cell_type": "code",
    "execution_count": 1216,
-   "id": "22fc246a",
+   "id": "6146595f",
    "metadata": {},
    "outputs": [
     {
@@ -14806,7 +14806,7 @@
   {
    "cell_type": "code",
    "execution_count": 1214,
-   "id": "3f9ad422",
+   "id": "46d99a71",
    "metadata": {},
    "outputs": [
     {
@@ -14897,8 +14897,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1217,
+   "id": "8de63f1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shark = again.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "720acd96",
+   "id": "ff6292e9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -14906,7 +14916,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec44808c",
+   "id": "9033343c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -14914,15 +14924,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afde3497",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c1f09e43",
+   "id": "ca435967",
    "metadata": {},
    "outputs": [],
    "source": []
